Service discovery and reorganisation
