# transcriptionservice/server/mongodb/db_client.py
@@ -1,9 +1,13 @@
-from time import time
 from datetime import datetime
+from time import time
 from uuid import uuid4
 
 from pymongo import MongoClient, errors
-from transcriptionservice.workers.utils import TranscriptionConfig, TranscriptionResult
+
+from transcriptionservice.transcription.configs.transcriptionconfig import (
+    TranscriptionConfig,
+)
+from transcriptionservice.transcription.transcription_result import TranscriptionResult
 
 """ The Databases is structured as follows:
 
@@ -16,6 +20,7 @@ origin and the configurations used.
 
 """
 
+
 def mongo_error_handler(func):
     def inner_func(*args, **kwargs):
         try:
@@ -26,62 +31,87 @@ def mongo_error_handler(func):
             raise Exception("Database error: {}".format(e))
         else:
             return res
+
     return inner_func
 
 
 class DBClient:
-    """ DBClient setups and maintains a connexion to a MongoDB database. """
+    """DBClient setups and maintains a connexion to a MongoDB database."""
+
     def __init__(self, db_info: dict):
-        """ db_info object is a dictionary structured as follow:
-            {
-               "db_host" : database host, 
-               "db_port" : database listening port, 
-               "service_name" : service name used as collection name, 
-               "db_name": database's name
-            }     
+        """db_info object is a dictionary structured as follow:
+        {
+           "db_host" : database host,
+           "db_port" : database listening port,
+           "service_name" : service name used as collection name,
+           "db_name": database's name
+        }
         """
-        self.client = MongoClient(db_info["db_host"], port=db_info["db_port"], connect=False, serverSelectionTimeoutMS=3000)
+        self.client = MongoClient(
+            db_info["db_host"],
+            port=db_info["db_port"],
+            connect=False,
+            serverSelectionTimeoutMS=3000,
+        )
         self.transcriptions_collection = self.client[db_info["db_name"]][db_info["service_name"]]
         self.results_collection = self.client[db_info["db_name"]]["results"]
 
     @mongo_error_handler
     def fetch_transcription(self, file_hash: str) -> dict:
-        """ Fetch transcription result in the SERVICE_NAME collection using file_hash as id """
-        result = self.transcriptions_collection.find_one({"_id" : file_hash})
+        """Fetch transcription result in the SERVICE_NAME collection using file_hash as id"""
+        result = self.transcriptions_collection.find_one({"_id": file_hash})
         return result["transcription"] if result is not None else None
 
     @mongo_error_handler
     def fetch_result(self, ressource_id: str) -> dict:
-        """ Fetch final result in the results collections using result_id as id """
-        result = self.results_collection.find_one({"_id" : ressource_id})
+        """Fetch final result in the results collections using result_id as id"""
+        result = self.results_collection.find_one({"_id": ressource_id})
         return result["result"] if result is not None else None
-    
+
     @mongo_error_handler
     def push_transcription(self, file_hash: str, words: list):
-        """ Insert transcription result in the SERVICE_NAME collection using file_hash as id """
-        self.transcriptions_collection.find_one_and_update({"_id": file_hash},
-                                                           {"$set": {"datetime": datetime.fromtimestamp(time()).isoformat(),
-                                                                     "transcription": {
-                                                                         "words": [w.json for w in words]
-                                                                     }}},
-                                                           upsert=True)
+        """Insert transcription result in the SERVICE_NAME collection using file_hash as id"""
+        self.transcriptions_collection.find_one_and_update(
+            {"_id": file_hash},
+            {
+                "$set": {
+                    "datetime": datetime.fromtimestamp(time()).isoformat(),
+                    "transcription": {"words": [w.json for w in words]},
+                }
+            },
+            upsert=True,
+        )
+
     @mongo_error_handler
-    def push_result(self, file_hash: str, job_id: str, origin: str, service_name: str, config: TranscriptionConfig, result: TranscriptionResult) -> str:
-        """ Insert final result in the results collection and returns a ressource_id """
+    def push_result(
+        self,
+        file_hash: str,
+        job_id: str,
+        origin: str,
+        service_name: str,
+        config: TranscriptionConfig,
+        result: TranscriptionResult,
+    ) -> str:
+        """Insert final result in the results collection and returns a ressource_id"""
         ressource_id = str(uuid4())
-        self.results_collection.find_one_and_update({"_id": ressource_id},
-                                                           {"$set": {"hash": file_hash,
-                                                                     "job_id" : job_id,
-                                                                     "origin" : origin,
-                                                                     "service_name": service_name,
-                                                                     "datetime": datetime.fromtimestamp(time()).isoformat(),
-                                                                     "config": config.toJson(),
-                                                                     "result": result.final_result()
-                                                           }},
-                                                           upsert=True)
+        self.results_collection.find_one_and_update(
+            {"_id": ressource_id},
+            {
+                "$set": {
+                    "hash": file_hash,
+                    "job_id": job_id,
+                    "origin": origin,
+                    "service_name": service_name,
+                    "datetime": datetime.fromtimestamp(time()).isoformat(),
+                    "config": config.toJson(),
+                    "result": result.final_result(),
+                }
+            },
+            upsert=True,
+        )
         return ressource_id
 
     def close(self):
-        """ Close client connexion """
+        """Close client connexion"""
         if self.isset:
             self.client.close()
